# json_to_struct

./: Cargo.toml  LICENSE  README.md
examples/: basic.rs
src/: generator.rs  lib.rs  parser.rs
